test-plan/good-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: good-ns
  labels:
    owner: team-a
