test-plan/test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    owner: test-team
