test-plan/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad
  labels:
    app: bad
spec:
  containers:
  - name: pause
    image: registry.k8s.io/pause:3.9
    securityContext:
      privileged: true
