test-plan/fully-compliant-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fully-compliant-pod-2
  namespace: load-test-03
  labels:
    app: test-app
    version: v1.0.0
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    securityContext:
      privileged: false
