test-plan/load-test-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pause
  labels:
    app: pause
    version: v1.0.0
spec:
  replicas: 0
  selector:
    matchLabels:
      app: pause
      version: v1.0.0
  template:
    metadata:
      labels:
        app: pause
        version: v1.0.0
    spec:
      containers:
      - name: pause
        image: registry.k8s.io/pause:3.9
        securityContext:
          privileged: false
        resources:
          requests:
            cpu: "5m"
            memory: "16Mi"
          limits:
            cpu: "30m"
            memory: "64Mi"
