test-plan/simple-compliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-compliant-pod
  namespace: load-test-01
  labels:
    app: test-app
    version: v1.0.0
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    securityContext:
      privileged: false
